# FeederReader

./: .gitignore  LICENSE  README.md  config.toml  fdrdr_config.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  tox.ini
docs/: code.rst  components.rst  conf.py  containers.rst  context.rst  index.html  install.rst  operate.rst
docs/_build/html/: code.html  components.html  containers.html  context.html  genindex.html  index.html  install.html  objects.inv  operate.html  py-modindex.html  search.html  searchindex.js  test.html
docs/_build/html/_sources/: code.rst.txt  components.rst.txt  containers.rst.txt  context.rst.txt  index.rst.txt  install.rst.txt  operate.rst.txt  test.rst.txt
src/: common.py  filter.py  model.py  monitor.py  notification.py  reader.py  storage.py  writer.py
tests/: conftest.py  test_common.py  test_filter.py  test_model.py  test_monitor.py  test_notification.py  test_reader.py  test_storage.py  test_writer.py
